Removed many warnings